Fix join event button not centered (#164)
* fix the users api to resolve me and byName routes

fix

conf

fix

fix

fix

correct notification stack

patch participant as notified

clean some message.logs

small ajust at time for dismiss

fix

fix

fix

fix

set the dismiss time for aceptance notification to false

fix

fix

delete unecessary code

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

clena console.log

fix

fix

fix

fix

fix

fix

fix

fix

delete space

fix

fix

fix

add copy script at build

fix

fix

* fix the users api to resolve me and byName routes

fix

conf

fix

fix

fix

correct notification stack

patch participant as notified

clean some message.logs

small ajust at time for dismiss

fix

fix

fix

fix

set the dismiss time for aceptance notification to false

fix

fix

delete unecessary code

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

clena console.log

fix

fix

fix

fix

fix

fix

fix

fix

delete space

fix

fix

fix

add copy script at build

fix

fix

* fix the users api to resolve me and byName routes

fix

conf

fix

fix

fix

correct notification stack

patch participant as notified

clean some message.logs

small ajust at time for dismiss

fix

fix

fix

fix

set the dismiss time for aceptance notification to false

fix

fix

delete unecessary code

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

fix

clena console.log

fix

fix

fix

fix

fix

fix

fix

fix

delete space

fix

fix

fix

add copy script at build

fix

fix

* fix head

* fix head

* fix head

* min witdh set for the card details component

* add a line braker

* add another line braker

* clean important op

--- a/client/components/EventDetailsComponent/event-details-component.css
+++ b/client/components/EventDetailsComponent/event-details-component.css
@@ -1,6 +1,7 @@
 .card {
    width: flex !important;
    margin-top: 2% !important;
+   min-width: 320px;
 }
 
 .cardTitle {
@@ -10,7 +11,7 @@
   font-weight: 300 !important;
 }
 
-aviabilityContainer {
+.aviabilityContainer {
   display: flex;
   justify-content: space-around;
 }
